src/test/deca/syntax/invalid/homemade/test/test_lex_inv_0_before_int.deca
// Test avec 0 devant un entier
{
    0154;
}